==> tommybee456/OpenSplitDeck/firmware/controller/src/IQS7211E/IQS7211E.cpp <==
#include "IQS7211E_init.h"
#include "IQS7211E.h"

void iqs7211e_ready_interrupt(void)
{
    if(digitalRead(iqs7211e_ready_pin))
  {
    iqs7211e_deviceRDY = false;
  }
  else
  {
    iqs7211e_deviceRDY = true;
  }
}
